--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <meta name="twitter:description" content="KhaM is an open-source project preserving endangered South Asian dialects, voices, and emotional language in AI." />
 
     <!-- Favicon -->
-    <link rel="icon" href="/lovable-uploads/5aa78c8b-ada8-4093-a72f-4dbca14e687b.png" type="image/png">
+    <link rel="icon" href="/kham-favicon.svg" type="image/svg+xml" />
+    <link rel="alternate icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
