--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KhaM – Preserving Disappearing Voices in AI from South Asia</title>
-    <meta name="description" content="KhaM is an open-source project preserving endangered South Asian dialects, voices, and emotional language in AI." />
+    <title>KhaM — Sovereign AI for South Asia</title>
+    <meta name="description" content="The languages of South Asia are not just multilingual — they are emotionally polyphonic. KhaM is building cultural infrastructure to preserve them in AI before they disappear from both memory and machine." />
     <meta name="author" content="Ripon" />
     <meta name="keywords" content="South Asian languages, endangered dialects, emotional speech AI, Bangla voice models, Hindi voice models, Urdu voice models, cultural AI, memory preservation project, voice technology, linguistic diversity" />
 
     <!-- Open Graph tags -->
-    <meta property="og:title" content="KhaM – A Cultural Infrastructure Project for Preserving Language in AI" />
-    <meta property="og:description" content="Protecting endangered voices and emotional nuance in South Asian languages through open-source tools and care." />
+    <meta property="og:title" content="KhaM — Sovereign AI for South Asia" />
+    <meta property="og:description" content="KhaM is building cultural infrastructure to preserve South Asian dialects, tone, and emotional nuance in AI." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://khamlabs.org" />
 
     <!-- Twitter Card tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="KhaM – Preserving Disappearing Voices in AI from South Asia" />
-    <meta name="twitter:description" content="KhaM is an open-source project preserving endangered South Asian dialects, voices, and emotional language in AI." />
+    <meta name="twitter:title" content="KhaM — Sovereign AI for South Asia" />
+    <meta name="twitter:description" content="KhaM is building cultural infrastructure to preserve South Asian dialects, voices, and emotional nuance in AI." />
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="https://khamlabs.org/" />
 
     <!-- Favicon -->
     <link rel="icon" href="/kham-favicon.svg" type="image/svg+xml" />
