seo(landing): refine JSON-LD, OG image consistency, and sitemap/robots

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <meta property="og:title" content="KhaM — Sovereign AI for South Asia" />
     <meta property="og:description" content="KhaM is building cultural infrastructure to preserve South Asian dialects, tone, and emotional nuance in AI." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://khamlabs.org" />
+    <meta property="og:url" content="https://khamlabs.org/" />
+    <meta property="og:image" content="https://khamlabs.org/og/kham-main.png" />
+    <meta property="og:image:alt" content="KhaM — Sovereign AI for South Asia" />
 
     <!-- Twitter Card tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="KhaM — Sovereign AI for South Asia" />
     <meta name="twitter:description" content="KhaM is building cultural infrastructure to preserve South Asian dialects, voices, and emotional nuance in AI." />
+    <meta name="twitter:image" content="https://khamlabs.org/og/kham-main.png" />
     <meta name="robots" content="index,follow" />
     <link rel="canonical" href="https://khamlabs.org/" />
 
