--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 
     <!-- Favicon -->
     <link rel="icon" href="/kham-favicon.svg" type="image/svg+xml" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="alternate icon" href="/favicon.ico" />
     <link rel="shortcut icon" href="/favicon.ico" />
+    <meta name="theme-color" content="#111111" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
